# -dnd-ai-assistant

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md
scripts/: test.ps1
src/dnd_ai_assistant/: __init__.py  adventure.py  adventure_generator.py  adventure_importer.py  adventure_map.py  adventure_review.py  adventure_runtime.py  ai_dm.py  ai_provider.py  api.py  demo.py  rules_corpus.py  sample_data.py  scenario.py  scene_engine.py
src/dnd_ai_assistant/core/: __init__.py  campaign.py  character.py  combat.py  config.py  damage.py  dice.py  dm_tools.py  dnd5e.py  initiative.py  serialization.py  skills.py  spells.py  store.py
src/dnd_ai_assistant/scenes/: __init__.py  old_chapel.json
tests/: test_adventure.py  test_adventure_generator.py  test_adventure_importer.py  test_adventure_map.py  test_adventure_review.py  test_adventure_runtime.py  test_ai_dm.py  test_ai_provider.py  test_api.py  test_combat.py  test_config.py  test_core.py  test_demo.py  test_dm_tools.py  test_initiative.py  test_rules_corpus.py  test_scenario.py  test_serialization.py  test_spells.py  test_store.py  test_web_ui.py
web/: index.html
